--- a/frontweb/public/index.html
+++ b/frontweb/public/index.html
@@ -13,6 +13,7 @@
   <body>
     <noscript>Você precisa habilitar o Javascript no seu navegador</noscript>
     <div id="root"></div>
+    <div id="log"></div>
     
   </body>
 </html>
